# labs-institute-prototype

./: .gitignore  CLAUDE.md  PROGRESS.md  index.html  sessions.json
projects/neurospect/api/: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml  render.yaml  requirements.txt
projects/neurospect/api/alembic/: env.py
projects/neurospect/api/alembic/versions/: 0001_initial.py  0002_coach_tables.py  0003_add_position_size.py  0004_broker_credentials.py  0005_prop_shield.py  0006_journal_enhancements.py  0007_user_reports.py
projects/neurospect/api/app/: config.py  database.py  deps.py  main.py
projects/neurospect/api/app/auth/: discord.py  jwt.py  router.py
projects/neurospect/api/app/coach/: claude_client.py  prompt_loader.py  router.py  validation.py
projects/neurospect/api/app/models/: broker_credential.py  coaching_event.py  enums.py  prop_shield.py  report.py  screenshot.py  subscription.py  trade.py  tv_token.py  user.py
projects/neurospect/api/app/routers/: analytics.py  billing.py  prop_shield.py  reports.py  screenshots.py  trades.py  tradovate.py  tv_tokens.py
projects/neurospect/api/app/schemas/: analytics.py  behavior.py  billing.py  broker.py  coach.py  prop_shield.py  report.py  screenshot.py  trade.py
projects/neurospect/api/app/services/: analytics.py  behavior.py  (+9 more)
projects/neurospect/api/tests/: test_analytics.py  test_behavior.py  test_coach_pine_payload.py  test_coach_prompt_loader.py  test_coach_validation.py  test_phase0_deliverables.py  test_prop_shield.py  test_reports.py  test_singleton.py  test_tradovate.py
(+708 files in other folders)
